# obs-ci-hello-world

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake  project.spec
.osc/: _scm
